Use the "concurrency testing" of erlperf
This way, we increase the number of concurrent workers from 1 to 200
every 3 seconds. This allows to get a more precise graph as we increase
the concurrency.

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,8 @@
 
 {deps, [{khepri, {git, "https://github.com/rabbitmq/khepri.git",
                   {branch, "main"}}},
-        {erlperf, {git, "https://github.com/max-au/erlperf.git"}}]}.
+        {erlperf, {git, "https://github.com/rabbitmq/erlperf.git",
+                   {branch, "configure-concurrency-increase-steps"}}}]}.
 
 {escript_incl_apps,
  [khepri,
