Monitor memory footprint and garbage collections during benchmarking
New graphs are added below the existing "Operations per second" graphs
to show those resources.

While here, start to use `bbmustache` as the template engine to prepare
the HTML report.

--- a/rebar.config
+++ b/rebar.config
@@ -1,14 +1,20 @@
 %% vim:ft=erlang:
 {minimum_otp_vsn, "23.0"}.
 
-{deps, [{khepri, {git, "https://github.com/rabbitmq/khepri.git",
+{deps, [{argparse, "1.1.4"},
+        {jsx, "3.1.0"},
+        {bbmustache, "1.12.2"},
+        {khepri, {git, "https://github.com/rabbitmq/khepri.git",
                   {branch, "main"}}},
         {erlperf, {git, "https://github.com/rabbitmq/erlperf.git",
                    {branch, "configure-concurrency-increase-steps"}}}]}.
 
 {escript_incl_apps,
- [khepri,
-  erlperf]}.
+ [argparse,
+  bbmustache,
+  erlperf,
+  jsx,
+  khepri]}.
 
 {escript_main_app, khepri_benchmark}.
 {escript_name, "khepri-benchmark"}.
