use latest khepri for each benchmark run
Rebar3 supports "checkout dependencies"
(https://rebar3.readme.io/docs/dependencies#checkout-dependencies)
which can be used to override the version of a dependency declared
in the `rebar.config`. Here we check out khepri at the latest revision
directly into a _checkouts/khepri directory so that the benchmark
ends up using the latest khepri commit.

--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -14,7 +14,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout khepri-benchmark
+        uses: actions/checkout@v3
+
+      - name: Checkout khepri
+        uses: actions/checkout@v3
+        with:
+          repository: rabbitmq/khepri
+          # _checkouts/<dependency> overrides the dependency version defined in
+          # rebar.config for a rebar3 project
+          # https://rebar3.readme.io/docs/dependencies#checkout-dependencies
+          path: _checkouts/khepri
+
       - uses: erlef/setup-beam@v1
         with:
           otp-version: 24
