--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -1,9 +1,10 @@
 name: Benchmark
 
 on:
+  pull_request:
   push:
     branches:
-      - 'main'
+      - '*'
 
   repository_dispatch:
     types: [push-in-khepri]
