GitHub Actions: Upgrade Erlang dependencies before compile
We are using a "checkout dependency" for Khepri, so this one is fine.
However, Khepri might depend on newer Erlang applications than what is
referenced in the `rebar.lock` file.

--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -34,6 +34,9 @@ jobs:
         with:
           otp-version: 25
 
+      - name: Upgrade Erlang dependencies
+        run: rebar3 upgrade -a
+
       - name: Compile
         run: rebar3 escriptize
 
