--- a/rebar.config
+++ b/rebar.config
@@ -1,11 +1,11 @@
 %% vim:ft=erlang:
 {minimum_otp_vsn, "23.0"}.
 
-{deps, [{argparse, "1.1.4"},
+{deps, [{argparse, "2.0.0"},
         {jsx, "3.1.0"},
         {bbmustache, "1.12.2"},
         {erlperf, {git, "https://github.com/rabbitmq/erlperf.git",
-                   {branch, "configure-concurrency-increase-steps"}}},
+                   {branch, "concurrency-step"}}},
         %{ra, {git, "https://github.com/rabbitmq/ra.git",
         %      {branch, "main"}}},
         {khepri, {git, "https://github.com/rabbitmq/khepri.git",
