Switch to max-au/erlperf:master
Support for concurrency --step has been merged

--- a/rebar.config
+++ b/rebar.config
@@ -4,8 +4,8 @@
 {deps, [{argparse, "2.0.0"},
         {jsx, "3.1.0"},
         {bbmustache, "1.12.2"},
-        {erlperf, {git, "https://github.com/rabbitmq/erlperf.git",
-                   {branch, "concurrency-step"}}},
+        {erlperf, {git, "https://github.com/max-au/erlperf.git",
+                   {branch, "master"}}},
         %{ra, {git, "https://github.com/rabbitmq/ra.git",
         %      {branch, "main"}}},
         {khepri, {git, "https://github.com/rabbitmq/khepri.git",
